attempt to fix scrolling issue on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -253,6 +253,7 @@ span.chip.bingo.locked {
 
 .contentTab {
   max-width: 600px;
+  min-height: 0;
 }
 
 .hintdialog p {
